[package]
name = "chatroom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.0", features = ["full"] }
tungstenite = "0.17.2"
tokio-tungstenite = "*"
futures-util = { version = "0.3", features = ["sink", "std"] }
futures-channel = "0.3"
url = "2.0.0"
